ex4 finish and replace getFirst to get(0)